# the-book-of-hpmor-fanfics-ru

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.ru.md  package.json  pyproject.toml  vercel.json
.github/workflows/: release-story-epubs.yml
books/various-muggles/: CODEX_TRANSLATION.md  config.json  manifest.json
books/various-muggles/output/: segment0002.md  segment0003.md  segment0005.md  segment0006.md  segment0007.md  segment0008.md  segment0009.md  segment0010.md  segment0011.md  segment0012.md  segment0013.md  segment0014.md  segment0015.md  segment0016.md  segment0017.md  segment0018.md  segment0019.md  segment0020.md  segment0021.md  segment0022.md  segment0023.md  segment0024.md  segment0025.md  segment0026.md  segment0028.md  segment0029.md  segment0030.md  segment0031.md  segment0032.md  segment0034.md  segment0035.md  (+303 more)
glossary/: glossary.md  style.md
scripts/: _bootstrap.py  automation_claim.py  automation_preflight.py  book.css  build_epub.py  build_story_release.py  cleanup_completed_worktrees.py  commit_pending_local_publish.py  convert.py  cron_push_main.sh  detect_story_release_candidates.py  merge_and_build.py  pending.py  pipeline_common.py  publish_from_worktree.py  push_pending_main.py  review_segments.py  sync_manifest.py  unpack_epub.py  validate_epub.py  validate_run.py
site/: README.md  components.json  next.config.ts  package.json
site/scripts/: generate-audio.ts  sync-content.ts
site/src/: mdx-components.tsx
src/en/: content.opf  preface.xhtml  toc.ncx  toc.xhtml
src/ru/: preface.xhtml  toc.ncx  toc.xhtml
(+2623 files in other folders)
